# my-socialAI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  setup.py
config/: config.yaml
src/data/: __init__.py  dataset_processor.py  web_extractor.py
src/models/: __init__.py  finetuner.py  qa_generator.py
src/utils/: __init__.py  api.py  logging_config.py
tests/: __init__.py  conftest.py  test_dataset_processor.py  test_finetuner.py  test_qa_generator.py  test_utils.py  test_web_extractor.py
