[project]
name = "socialai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.7.0",
    "beautifulsoup4>=4.13.4",
    "bitsandbytes>=0.41.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "google-genai>=1.16.1",
    "peft>=0.8.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
