[project]
name = "socialai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.7.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.13.4",
    "bitsandbytes>=0.41.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "google-genai>=1.16.1",
    "peft>=0.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "aiohttp>=3.8.0",
    "responses>=0.24.0"
]
